[tool.poetry]
name = "StorageLeaf"
version = "2.23.0"
description = "Accepts sensor data and saves them into a database. The saved data can be accessed via api."
authors = ["TheCodeLabsDevs"]

[[tool.poetry.source]]
name = "TheCodeLabs"
url = "https://pypi.thecodelabs.de"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.13"
thecodelabs-baseutils = {version = "*", source = "TheCodeLabs" }
fastapi = "0.128.0"
uvicorn = "0.40.0"
sqlalchemy = "2.0.45"
apscheduler = "3.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
