[tool.poetry]
name = "StorageLeaf"
version = "2.25.1"
description = "Accepts sensor data and saves them into a database. The saved data can be accessed via api."
authors = ["TheCodeLabsDevs"]

[[tool.poetry.source]]
name = "TheCodeLabs"
url = "https://pypi.thecodelabs.de"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.14"
thecodelabs-baseutils = {version = "*", source = "TheCodeLabs" }
fastapi = "0.138.2"
uvicorn = "0.49.0"
sqlalchemy = "2.0.51"
apscheduler = "3.11.3"

# explicitly pin versions of the following dependencies to ensure python 3.14 compatibility
pydantic = "2.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
